# romsorter

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  romsorter.cpp
src/Linux/: CMakeLists.txt
